# CiteRAG

./: README.md  constraints.txt  pyproject.toml  requirements.txt
configs/: default.yaml
eval/: questions.jsonl
scripts/: chat.py  eval.py  index.py
src/citerag/: chunking.py  citations.py  cli.py  embeddings.py  evals.py  indexer.py  ingest.py  prompts.py  rag_chain.py  retrieve.py  settings.py
