[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citerag"
version = "0.1.0"
description = "Local-first PDF RAG with strict citations via Ollama + Chroma"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Julia Nuss"}]
dependencies = []

[project.scripts]
citerag = "citerag.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]